--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					</div>
 					<h3>BMW</h3>
 					<p>Lorem ipsum dolor sit amet.</p>
-					<button class="showMore-btn">Show More</button>
+					<a href="./product.html#bmwContainer"><button class="showMore-btn">Show More</button></a>
 				</div>
 
 				<div class="card">
@@ -91,7 +91,7 @@
 					</div>
 					<h3>Audi</h3>
 					<p>Lorem ipsum dolor sit amet.</p>
-					<button class="showMore-btn">Show More</button>
+					<a href="./product.html#audiContaine"><button class="showMore-btn">Show More</button></a>
 				</div>
 
 				<div class="card">
@@ -100,7 +100,7 @@
 					</div>
 					<h3>porsche</h3>
 					<p>Lorem ipsum dolor sit amet.</p>
-					<button class="showMore-btn">Show More</button>
+					<a href="./product.html"><button class="showMore-btn">Show More</button></a>
 				</div>
 			</div>
 		</section>
