--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a href="./index.html"><img src="images/turpo-logo.png" width="25%" alt="Turbo"></a>
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./index.html#about">About Us</a></li>
                 <li><a href="./index.html#ourCars">Our Cars</a></li>
                 <li><a href="#contactUs">Contact us</a></li>
