Cart navigation to sign in first

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<li><a href="#about">About Us</a></li>
 				<li><a href="#ourCars">Our Cars</a></li>
 				<li><a href="#contactUs">Contact us</a></li>
-				<li><a href="#">Cart</a></li>
+				<li><a href="./SignIn.html">Cart</a></li>
 			</ul>
 		</div>
 	</header>
