--- a/product.html
+++ b/product.html
@@ -22,7 +22,7 @@
                 <li><a href="./index.html#about">About Us</a></li>
                 <li><a href="./index.html#ourCars">Our Cars</a></li>
                 <li><a href="#contactUs">Contact us</a></li>
-                <li><a href="./SignIn.html">Cart</a></li>
+                <li><a href="./Cart.html">Cart</a></li>
             </ul>
         </div>
     </header>
