--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					</div>
 					<h3>Audi</h3>
 					<p>Lorem ipsum dolor sit amet.</p>
-					<a href="./product.html#audiContaine"><button class="showMore-btn">Show More</button></a>
+					<a href="./product.html#audiContainer"><button class="showMore-btn">Show More</button></a>
 				</div>
 
 				<div class="card">
